# NeuroVA

./: .gitignore  Cargo.toml  IDEAS.txt  Instructions.txt  Integration.txt  README.md  conseils.txt  identity.txt  kimichat.txt  knowledge.txt  question.txt  runcmd.txt  science.txt  structureFRONTBACK.txt  test_determinism.rs  vision.txt
agi_core/: Cargo.toml
agi_core/src/: conceptual_hierarchy.rs  connectome.rs  creativity_forge.rs  curiosity_engine.rs  deep_thinker.rs  direct_answer_extractor.rs  ethical_core.rs  hippocampus.rs  holographic_memory.rs  inner_drive.rs  knowledge_explorer.rs  knowledge_scanner.rs  lemmatizer.rs  lib.rs  mcq_solver.rs  motor_cortex.rs  neurochemical_modulator.rs  neuron.rs  performance_monitor.rs  personality.rs  prefrontal_cortex.rs  prompt_segmenter.rs  quantum.rs  quantum_gatekeeper.rs  reasoning_engine.rs  self_awareness.rs  sensory_cortex.rs  silicium.rs  social_cortex.rs  synthesis.rs  synthesis_cortex.rs  thalamus.rs  trace_visualizer.rs
agi_core/tests/: hierarchy_test.rs
corpus_fondamental/: ethique.txt  identite_fondamentale.txt  philosophie.txt  poesie.txt
neuro_frontend/: next.config.ts  package-lock.json  package.json
neuro_frontend/src/: three.d.ts
neuro_frontend/src/app/: globals.css  layout.tsx  page.tsx
neuro_frontend/src/components/: AgiInterface.tsx  FluidNebula.tsx  MetricsDisplay.tsx  ThreeScene.tsx
neuro_server/: Cargo.toml
neuro_server/src/: main.rs
neuro_visualizer/: Cargo.toml
neuro_visualizer/src/: eeg_shader.wgsl  gui.rs  main.rs  shader.wgsl
src/: eeg_shader.wgsl  main.rs  shader.wgsl
tests/: hierarchy_test.rs
tools/: loc_checker.rs  neuro_vis
tools/gen_connectome/: Cargo.toml
(+1 files in other folders)
