[package]
name = "agi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bincode = "1.3.3"
fuzzy-matcher = "0.3.7"
image = "0.25.1"
indicatif = { version = "0.17.0", features = ["rayon"] }
log = "0.4.22"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
nlprule = "0.6.4"
phf = { version = "0.11", features = ["macros"] }
num-complex = "0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
string-interner = "0.17"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
unicode-segmentation = "1.12.0"
atomic_float = "1.0"
sysinfo = "0.30.13"

