[package]
name = "neuro_server"
version = "0.1.0"
edition = "2024"

[dependencies]
agi_core = { path = "../agi_core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
num_cpus = "1.17.0"

